# diploma-dvfs

./: .gitignore  CMakeLists.txt  main.cpp
BL/: CMakeLists.txt  IDAFacade.h
BL/DataCollection/: Collector.cpp  Collector.h  DataTypes.h
BL/Runner/: BasicRunner.cpp  BasicRunner.h  DemoRunner.cpp  DemoRunner.h  IOptimizer.h  IRunner.h  Optimizer.cpp  Optimizer.h  Runner.cpp  Runner.h
BL/core/: IPmuCollector.h  ISystemController.h  PmuCollector.cpp  PmuCollector.h  RunnerCollector.cpp  RunnerCollector.h  SystemController.cpp  SystemController.h
BL/workloads/: IWorkload.cpp  IWorkload.h  IdleWorkload.cpp  IdleWorkload.h  PortionWorkload.cpp  PortionWorkload.h
Bench/: CMakeLists.txt  main.cpp
Config/: config.txt
DA/: CMakeLists.txt
DA/Sqlite/: DASqliteFacade.cpp  DASqliteFacade.h  SqliteConnection.cpp  SqliteConnection.h  SqliteIdleDataRepository.cpp  (+3 more)
DBScripts/: Makefile  v.sql
GUI/: CMakeLists.txt  main.cpp  ui_view.h  view.cpp  view.h  view.ui
GraphDrawer/: drawer.py
Main/: CMakeLists.txt  main.cpp
base/: CMakeLists.txt  common_macros.h
base/config/: base_config.h  base_sections.h  yamlcpp_config.cpp  yamlcpp_config.h
base/exceptions/: base_exception.h  database_exceptions.h  logic_exceptions.h  server_exceptions.h
base/logger/: ILogger.h  LoggerFactory.cpp  LoggerFactory.h  SpdLogger.cpp  SpdLogger.h
base/logger_test/: CMakeLists.txt  main.cpp
cmake/: common.cmake  libs.cmake
core/: IPmuCollector.h  ISystemController.h  PmuCollector.cpp  PmuCollector.h  SystemController.cpp  SystemController.h
workloads/: workloads.cpp  workloads.h
